--- a/index.html
+++ b/index.html
@@ -147,6 +147,27 @@
       filter: drop-shadow(0 2px 8px rgba(120,115,245,0.10));
       transition: filter 0.18s;
     }
+    .tile-title {
+      font-size: 1.18rem;
+      font-weight: 800;
+      color: #2a254d;
+      margin-bottom: 0.5rem;
+      text-align: center;
+      letter-spacing: -0.5px;
+      transition: color 0.25s cubic-bezier(.4,0,.2,1);
+    }
+    .tile:hover .tile-title {
+      color: #fff;
+    }
+    .tile-desc {
+      font-size: 1.01rem;
+      color: #3d375a;
+      font-weight: 400;
+      margin-top: 0.2rem;
+      text-align: center;
+      opacity: 0.97;
+      line-height: 1.5;
+    }
     .tile:hover .tile-icon {
       filter: drop-shadow(0 4px 16px rgba(255,110,196,0.18));
     }
@@ -240,6 +261,13 @@
       box-shadow: 0 2px 8px rgba(120,115,245,0.08);
       transition: background 0.2s, color 0.2s, transform 0.2s, box-shadow 0.2s;
       border: 2px solid #e3e6ff;
+    }
+    .social-icons .icon img {
+      filter: brightness(0) saturate(100%) invert(32%) sepia(67%) saturate(747%) hue-rotate(217deg) brightness(92%) contrast(92%) !important;
+      transition: filter 0.2s;
+    }
+    .social-icons .icon:hover img {
+      filter: brightness(0) saturate(100%) invert(1) !important;
     }
     .social-icons .icon:hover {
       background: #7873f5;
@@ -570,6 +598,8 @@
       100% { transform: scale(1.08) translateY(-18px) rotate(8deg); }
     }
   </style>
+<style>
+</style>
   <style>
     .page-transition {
       position: fixed;
@@ -632,22 +662,54 @@
       <div class="hero-inner">
         <div class="hero-content">
           <h1 class="hero-title">Hello, I'm Aman Kumar</h1>
-          <p class="bio">Creative designer & developer specializing in graphic design, UI/UX, web, and game development—crafting sleek, modern digital experiences.</p>
-          <div class="social-icons">
-            <a href="#" class="icon linkedin" title="LinkedIn" target="_blank">
-              <svg width="24" height="24" fill="currentColor"><path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-9h3v9zm-1.5-10.28c-.97 0-1.75-.79-1.75-1.75s.78-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm13.5 10.28h-3v-4.5c0-1.08-.02-2.47-1.5-2.47-1.5 0-1.73 1.17-1.73 2.39v4.58h-3v-9h2.89v1.23h.04c.4-.75 1.38-1.54 2.84-1.54 3.04 0 3.6 2 3.6 4.59v4.72z"/></svg>
-            </a>
-            <a href="https://instagram.com/i_am_.walker" class="icon instagram" title="Instagram: @i_am_.walker" target="_blank">
-              <svg width="24" height="24" fill="currentColor"><path d="M12 2.2c3.2 0 3.584.012 4.85.07 1.17.056 1.97.24 2.43.41.59.22 1.01.48 1.45.92.44.44.7.86.92 1.45.17.46.354 1.26.41 2.43.058 1.266.07 1.65.07 4.85s-.012 3.584-.07 4.85c-.056 1.17-.24 1.97-.41 2.43-.22.59-.48 1.01-.92 1.45-.44.44-.86.7-1.45.92-.46.17-1.26.354-2.43.41-1.266.058-1.65.07-4.85.07zm0-2.2c-3.259 0-3.667.012-4.947.07-1.276.058-2.147.24-2.89.51-.8.29-1.48.68-2.15 1.35-.67.67-1.06 1.35-1.35 2.15-.27.74-.452 1.614-.51 2.89-.058 1.28-.07 1.688-.07 4.947s.012 3.667.07 4.947c.058 1.276.24 2.147.51 2.89.29.8.68 1.48 1.35 2.15.67.67 1.35 1.06 2.15 1.35.74.27 1.614.452 2.89.51 1.28.058 1.688.07 4.947.07s3.667-.012 4.947-.07c1.276-.058 2.147-.24 2.89-.51.8-.29 1.48-.68 2.15-1.35.67-.67 1.06-1.35 1.35-2.15.27-.74.452-1.614.51-2.89.058-1.28.07-1.688.07-4.947s-.012-3.667-.07-4.947c-.058-1.276-.24-2.147-.51-2.89-.29-.8-.68-1.48-1.35-2.15-.67-.67-1.35-1.06-2.15-1.35-.74-.27-1.614-.452-2.89-.51-1.28-.058-1.688-.07-4.947-.07z"/><circle cx="12" cy="12" r="3.2"/><circle cx="18.4" cy="5.6" r="1.44"/></svg>
-            </a>
-            <a href="mailto:amankumar1948sahu@gmail.com" class="icon gmail" title="Gmail" target="_blank">
-              <svg width="24" height="24" fill="currentColor"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 2v.01L12 13 4 6.01V6h16zM4 20v-9.99l7.99 7.99c.39.39 1.02.39 1.41 0L20 10.01V20H4z"/></svg>
-            </a>
-            <a href="https://github.com/amankuamr" class="icon github" title="GitHub" target="_blank">
-              <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.373 0 12c0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.083-.729.083-.729 1.205.085 1.84 1.237 1.84 1.237 1.07 1.834 2.807 1.304 3.492.997.108-.775.418-1.305.762-1.605-2.665-.305-5.466-1.334-5.466-5.931 0-1.31.468-2.381 1.236-3.221-.124-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.3 1.23.957-.266 1.984-.399 3.003-.404 1.018.005 2.046.138 3.006.404 2.289-1.552 3.295-1.23 3.295-1.23.653 1.653.242 2.873.119 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.803 5.624-5.475 5.921.43.371.823 1.102.823 2.222 0 1.606-.014 2.898-.014 3.293 0 .321.218.694.825.576C20.565 21.796 24 17.299 24 12c0-6.627-5.373-12-12-12z"/></svg>
-            </a>
-          </div>
-          <button class="btn-12" onclick="window.open('https://drive.google.com/file/d/18ahDU5fBqQdD3CxSb7fmZC-Q16GQIW73/view?usp=drive_link','_blank')"><span>Resume</span></button>
+          <p class="bio">
+            Creative designer &amp; developer specializing in graphic design, UI/UX, web, and game development—crafting sleek, modern digital experiences.
+          </p>
+          <ul class="example-2">
+            <li class="icon-content">
+              <a href="https://www.linkedin.com/in/amankumar1948sahu/" aria-label="LinkedIn" data-social="linkedin" target="_blank">
+                <div class="filled"></div>
+                <span class="icon-img-stack">
+                  <img src="images/social icons/linkedpurple.png" alt="LinkedIn" class="icon-img-default" width="30" height="30" loading="eager" decoding="async" />
+                  <img src="images/social icons/linkedwhite.png" alt="LinkedIn White" class="icon-img-hover" width="30" height="30" loading="eager" decoding="async" />
+                </span>
+              </a>
+              <div class="tooltip">LinkedIn</div>
+            </li>
+            <li class="icon-content">
+              <a href="https://github.com/amankuamr" aria-label="GitHub" data-social="github" target="_blank">
+                <div class="filled"></div>
+                <span class="icon-img-stack">
+                  <img src="images/social icons/githubpurple.png" alt="GitHub" class="icon-img-default" width="30" height="30" loading="eager" decoding="async" />
+                  <img src="images/social icons/gitwhite.png" alt="GitHub White" class="icon-img-hover" width="30" height="30" loading="eager" decoding="async" />
+                </span>
+              </a>
+              <div class="tooltip">GitHub</div>
+            </li>
+            <li class="icon-content">
+              <a href="mailto:amankumar1948sahu@gmail.com" aria-label="Gmail" data-social="gmail" target="_blank">
+                <div class="filled"></div>
+                <span class="icon-img-stack">
+                  <img src="images/social icons/gmailpurple.png" alt="Gmail" class="icon-img-default" width="30" height="30" loading="eager" decoding="async" />
+                  <img src="images/social icons/gmailwhite.png" alt="Gmail White" class="icon-img-hover" width="30" height="30" loading="eager" decoding="async" />
+                </span>
+              </a>
+              <div class="tooltip">Gmail</div>
+            </li>
+            <li class="icon-content">
+              <a href="https://instagram.com/i_am_.walker" aria-label="Instagram" data-social="instagram" target="_blank">
+                <div class="filled"></div>
+                <span class="icon-img-stack">
+                  <img src="images/social icons/instagrampurple.png" alt="Instagram" class="icon-img-default" width="30" height="30" loading="eager" decoding="async" />
+                  <img src="images/social icons/instawhite.png" alt="Instagram White" class="icon-img-hover" width="30" height="30" loading="eager" decoding="async" />
+                </span>
+              </a>
+              <div class="tooltip">Instagram</div>
+            </li>
+          </ul>
+          <button class="btn-12" onclick="window.open('https://drive.google.com/file/d/18ahDU5fBqQdD3CxSb7fmZC-Q16GQIW73/view?usp=drive_link','_blank')">
+            <span>Resume</span>
+          </button>
         </div>
         <div class="hero-img-col">
           <div class="hero-img-modern-wrapper">
@@ -669,21 +731,21 @@
     <section class="tiles-grid-section">
       <h2 class="tiles-title">Explore My Expertise</h2>
       <div class="tiles-grid fixed-2x2">
-        <a class="tile tile-graphic" href="projects-graphic.html">
+        <a class="tile tile-graphic expertise-card" href="projects-graphic.html">
           <span class="tile-icon">🎨</span>
-          Graphic Design
+          <span class="tile-title">Graphic Design</span>
         </a>
-        <a class="tile tile-uiux" href="projects-uiux.html">
+        <a class="tile tile-uiux expertise-card" href="projects-uiux.html">
           <span class="tile-icon">🖌️</span>
-          UI/UX Design
+          <span class="tile-title">UI/UX Design</span>
         </a>
-        <a class="tile tile-web" href="projects-web.html">
+        <a class="tile tile-web expertise-card" href="projects-web.html">
           <span class="tile-icon">💻</span>
-          Web Development
+          <span class="tile-title">Web Development</span>
         </a>
-        <a class="tile tile-game" href="projects-game.html">
+        <a class="tile tile-game expertise-card" href="projects-game.html">
           <span class="tile-icon">🎮</span>
-          Game Development
+          <span class="tile-title">Game Development</span>
         </a>
       </div>
     </section>
@@ -1540,6 +1602,23 @@
   </footer>
 
   <script src="scripts/main.js"></script>
+  <script>
+    // Social icon hover image swap (trigger on the whole button, not just the img)
+    document.addEventListener('DOMContentLoaded', function() {
+      document.querySelectorAll('.example-2 .icon-content a').forEach(function(anchor) {
+        var img = anchor.querySelector('img[data-hover]');
+        if (!img) return;
+        var defaultSrc = img.getAttribute('data-default');
+        var hoverSrc = img.getAttribute('data-hover');
+        anchor.addEventListener('mouseenter', function() {
+          img.src = hoverSrc;
+        });
+        anchor.addEventListener('mouseleave', function() {
+          img.src = defaultSrc;
+        });
+      });
+    });
+  </script>
   <script>
     // Floating info box for timeline cards (run after DOM is loaded)
     window.addEventListener('DOMContentLoaded', function() {
