--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
               <div class="tooltip">Instagram</div>
             </li>
           </ul>
-          <button class="btn-12" onclick="window.open('https://drive.google.com/file/d/18ahDU5fBqQdD3CxSb7fmZC-Q16GQIW73/view?usp=drive_link','_blank')">
+          <button class="btn-12" onclick="window.open('https://drive.google.com/file/d/18CyaF4CZ0A-3NTwKN6ez9PsBdNpLP7oj/view?usp=sharing','_blank')">
             <span>Resume</span>
           </button>
         </div>
