--- a/index.html
+++ b/index.html
@@ -649,6 +649,7 @@
         <ul class="dropdown-content">
           <li><a href="profile-about.html">About Me</a></li>
           <li><a href="profile-contact.html">Contact</a></li>
+          <li><a href="about.html">About This Site</a></li>
         </ul>
       </li>
     </ul>
