--- a/moviez-case-study.html
+++ b/moviez-case-study.html
@@ -260,6 +260,7 @@
         <a href="profile.html" class="dropdown-toggle" tabindex="0">Profile <span class="arrow">▼</span></a>
         <ul class="dropdown-content">
           <li><a href="profile-about.html">About Me</a></li>
+          <li><a href="about.html">About this site</a></li>
           <li><a href="profile-contact.html">Contact</a></li>
         </ul>
       </li>
