--- a/about.html
+++ b/about.html
@@ -161,11 +161,23 @@
       .about-simple-buttons { justify-content: center; }
     }
     @media (max-width: 600px) {
+      body {
+        padding-top: 260px !important;
+      }
+      .navbar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 1000;
+      }
       main {
-        margin-top: 120px !important;
+        margin-top: 0 !important;
+        padding-top: 0 !important;
       }
       .about-simple-container {
         margin-top: 0 !important;
+        padding-top: 0 !important;
       }
       .about-simple-left {
         margin-top: 0 !important;
