--- a/moviez-case-study.html
+++ b/moviez-case-study.html
@@ -317,7 +317,7 @@
           </ul>
         </div>
         <div class="case-btn-row">
-          <a href="https://www.figma.com/proto/4ape8cXUQTdsbIITduIfPX/Untitled?node-id=0-1&t=I4qGaP5UCxHeHJJ1-1" target="_blank" class="case-btn">🎨 View Design</a>
+          <a href="https://www.figma.com/design/ly4V1454rxgFQtdPMqmhiX/Untitled?node-id=0-1&t=u1JeSejDvO7S8bXj-1" target="_blank" class="case-btn">🎨 View Design</a>
         </div>
         <div class="case-desc" style="margin-top:1.5em;margin-bottom:0.7em;">
           <b>Development Features:</b>
